<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DejaVuAndroid</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_generic_flow">GenericFlow</string>
    <string name="title_activity_profile_details_flow">ProfileDetailsFlow</string>
    <string name="title_activity_password_pin_auth">PasswordPinAuth</string>
    <string name="token_label">Have a token already ?</string>
    <string name="password_pin">Enter password and pin details below</string>
    <string name="password_auth_text">enter your password</string>
    <string name="token_hint">Enter token here</string>
    <string name="phone_hint">enter Phone Number</string>
    <string name="phone_label">Want a number attached to your account ? Make sure the number entered is on this device</string>
    <string name="welcome">Hi </string>
    <string name="verify">Verify</string>
    <string name="card_number">Card Number</string>
    <string name="card_label">Have a credit card details ? Provider the info in the filed below</string>
    <string name="cvv">CVV</string>
    <string name="password">Password</string>
    <string name="pin">pin</string>
    <string name="verify_password">Verify Password</string>
    <string name="verify_pin">Verify Pin</string>
    <string name="choice">choose a registration method</string>
    <string name="soft_string">Soft Token</string>
    <string name="hard_string">Hard Token</string>
    <string name="card_string">Card Details</string>
    <string name="data_picker_text"><u>MM:YYYY</u></string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="account_number_hint">Account</string>
    <string name="email_hint">Enter Email</string>
    <string name="name">Enter Name</string>
    <string name="other_names">Other Names</string>
    <string name="function_name">String here</string>
    <string name="account_number_text">Enter the account number attached to this phone</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="token_retry_label">Didn\'t get the token, Click to Resend</string>
    <string name="title_activity_contact">ContactActivity</string>

</resources>
