<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/zone_blue"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
       android:id="@+id/password_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#fff"
            android:gravity="left"
            android:text="Password"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:padding="12dp"
            android:background="#fff"
            android:id="@id/password_field"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#fff"
            android:gravity="left"
            android:text="Verify Password"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColor="#000"
            android:padding="12dp"
            android:background="#fff"
            android:id="@id/verify_password_field"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:hint="@string/verify_password"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="#fff"
            android:gravity="left"
            android:text="Pin"
            android:textSize="16dp"
            android:layout_marginLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:textColor="#000"
        android:padding="12dp"
        android:background="#fff"
        android:id="@id/pin_field"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="#fff"
        android:gravity="left"
        android:text="Verify Pin"
        android:textSize="16dp"
        android:layout_marginLeft="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:textColor="#000"
        android:padding="12dp"
        android:background="#fff"
        android:id="@id/verify_pin_field"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:hint="@string/verify_pin"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/verify" />

</LinearLayout>